--- a/config/query_config.yaml
+++ b/config/query_config.yaml
@@ -1,27 +1,29 @@
 ban:
-- 寻森小鹿男
-- 禅心云外镜
+- 
 
 team_m:
+- name:  夜溟彼岸花
+  yuhun: 
 - name:  封阳君
   yuhun: 
-- name:  不知火
+- name:  一目连
   yuhun: 
 - name:  祸津神
   yuhun: 
-- name:  
-  yuhun: 
-- name:  
+- name:  心友犬神
   yuhun: 
 
 team_d:
-- name:  祸津神
-  yuhun: 
-- name:  不知火
-  yuhun: 
 - name:  
   yuhun: 
 - name:  
   yuhun: 
 - name:  
   yuhun: 
+- name:  
+  yuhun: 
+- name:  
+  yuhun: 
+
+start_time: '2024-12-02'
+end_time: '2024-12-08'
